<resources>
    <string name="app_name">AndroidChess</string>
    <string name="a8">A8</string>
    <string name="b7">B7</string>
    <string name="a6">A6</string>
    <string name="g2">G2</string>
    <string name="f1">F1</string>
    <string name="c1">C1</string>
    <string name="g1">G1</string>
    <string name="a1">A1</string>
    <string name="e1">E1</string>
    <string name="b8">B8</string>
    <string name="a3">A3</string>
    <string name="a5">A5</string>
    <string name="a7">A7</string>
    <string name="g8">G8</string>
    <string name="e8">E8</string>
    <string name="c8">C8</string>
    <string name="h7">H7</string>
    <string name="h2">H2</string>
    <string name="h5">H5</string>
    <string name="h1">H1</string>
    <string name="d1">D1</string>
    <string name="h3">H3</string>
    <string name="a2">A2</string>
    <string name="g5">G5</string>
    <string name="a4">A4</string>
    <string name="g3">G3</string>
    <string name="g4">G4</string>
    <string name="f4">F4</string>
    <string name="f5">F5</string>
    <string name="f2">F2</string>
    <string name="e5">E5</string>
    <string name="e4">E4</string>
    <string name="e3">E3</string>
    <string name="e2">E2</string>
    <string name="d5">D5</string>
    <string name="d4">D4</string>
    <string name="d3">D3</string>
    <string name="d2">D2</string>
    <string name="c4">C4</string>
    <string name="c3">C3</string>
    <string name="c2">C2</string>
    <string name="b4">B4</string>
    <string name="b3">B3</string>
    <string name="b2">B2</string>
    <string name="c5">C5</string>
    <string name="b5">B5</string>
    <string name="g6">G6</string>
    <string name="f6">F6</string>
    <string name="e6">E6</string>
    <string name="b1">B1</string>
    <string name="c6">C6</string>
    <string name="b6">B6</string>
    <string name="f7">F7</string>
    <string name="e7">E7</string>
    <string name="d7">D7</string>
    <string name="c7">C7</string>
    <string name="g7">G7</string>
    <string name="d6">D6</string>
    <string name="f3">F3</string>
    <string name="h4">H4</string>
    <string name="h8">H8</string>
    <string name="f8">F8</string>
    <string name="d8">D8</string>
    <string name="h6">H6</string>
    <string name="board">board</string>
    <string name="a2pawn">A2Pawn</string>
    <string name="b2pawn">B2Pawn</string>
    <string name="c2pawn">C2Pawn</string>
    <string name="d2pawn">D2Pawn</string>
    <string name="e2pawn">E2Pawn</string>
    <string name="f2pawn">F2Pawn</string>
    <string name="g2pawn">G2Pawn</string>
    <string name="h2pawn">H2Pawn</string>
    <string name="a1rook">A1Rook</string>
    <string name="h1rook">H1Rook</string>
    <string name="g1knight">G1Knight</string>
    <string name="b1knight">B1Knight</string>
    <string name="c1bishop">C1Bishop</string>
    <string name="f1bishop">F1Bishop</string>
    <string name="d1queen">D1Queen</string>
    <string name="e1king">E1King</string>
    <string name="chessboard">chessboard</string>
    <string name="a7pawn">A7Pawn</string>
    <string name="b7pawn">A7Pawn</string>
    <string name="c7pawn">A7Pawn</string>
    <string name="d7pawn">A7Pawn</string>
    <string name="e7pawn">A7Pawn</string>
    <string name="f7pawn">A7Pawn</string>
    <string name="g7pawn">A7Pawn</string>
    <string name="h7pawn">A7Pawn</string>
    <string name="a8rook">a8rook</string>
    <string name="h8rook">h8rook</string>
    <string name="b8knight">b8knight</string>
    <string name="g8knight">g8knight</string>
    <string name="c8bishop">c8bishop</string>
    <string name="f8bishop">f8bishop</string>
    <string name="d8queen">d8queen</string>
    <string name="e8king">e8king</string>
    <string name="textview">TextView</string>
    <string name="title_activity_home_screen">Chess App</string>
    <string name="title_activity_chess_game">A Game of Chess</string>
    <string name="title_activity_playback">Game Recording Playback</string>
    <string name="title_activity_recording">Game Recording Playback</string>
    <string name="button_play_game">Play</string>
    <string name="button_play_recording">View Recording</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="next_move">Next Move</string>
    <string name="sort_name_button">Sort By Name</string>
    <string name="sort_date_button">Sort By Date</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="draw">Draw</string>
    <string name="undo">Undo</string>
    <string name="ai">AI</string>
    <string name="resign">Resign</string>
</resources>