<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="chess.MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    tools:visibility="visible">

    <TextView
        android:id="@+id/turn"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/textview" />



    <GridView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:numColumns="8"
        android:horizontalSpacing="0dp"
        android:verticalSpacing="0dp"
        android:id="@+id/gridView"
        >
    </GridView>

    <LinearLayout
        android:id="@+id/btnLL"
        android:layout_width="375dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/undoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/Button.White"
            app:backgroundTint="@color/black"
            android:textSize="12sp"
            android:layout_marginRight="5dp"
            android:text="@string/undo" />
        <Button
            android:id="@+id/drawButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/Button.White"
            app:backgroundTint="@color/black"
            android:textSize="12sp"
            android:layout_marginRight="5dp"
            android:text="@string/draw" />
        <Button
            android:id="@+id/resignButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/Button.White"
            app:backgroundTint="@color/black"
            android:textSize="12sp"
            android:layout_marginRight="5dp"
            android:text="@string/resign" />
        <Button
            android:id="@+id/aiButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/Button.White"
            app:backgroundTint="@color/black"
            android:textSize="12sp"
            android:layout_marginRight="5dp"
            android:text="@string/ai" />
    </LinearLayout>

    <TextView
        android:id="@+id/savegame"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="" />


    <LinearLayout
        android:id="@+id/matetext"
        android:layout_width="375dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        >
    <EditText
        android:id="@+id/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="15sp"
        android:inputType="text"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:text="" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Button.White"
        app:backgroundTint="@color/black"
        android:textSize="12sp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:text="Submit" />
    </LinearLayout>

</LinearLayout>